--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "dependencies": {
     "@actions/core": "^1.5.0",
     "@actions/github": "^5.0.0",
+    "@vercel/ncc": "^0.30.0",
     "execa": "^5.1.1",
     "semantic-release": "^17.4.7"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.10",
-    "@zeit/ncc": "^0.22.3",
     "eslint": "^7.32.0",
     "eslint-plugin-github": "^4.2.0",
     "eslint-plugin-jest": "^24.4.0",
