Made it ES compaltible

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "jest --passWithNoTests",
     "pack": "ncc build"
   },
+  "type": "module",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
