--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
+    "@semantic-release/changelog": "github:semantic-release/changelog",
     "@vercel/ncc": "^0.36.1",
     "execa": "^7.1.1",
     "semantic-release": "^19.0.5"
