--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "type": "module",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@semantic-release/changelog": "github:semantic-release/changelog",
+    "@actions/github": "^5.1.1",    
     "@vercel/ncc": "^0.36.1",
     "execa": "^7.1.1",
-    "semantic-release": "^19.0.5"
+    "semantic-release": "^19.0.5",
+    "@semantic-release/changelog": "^6.0.3"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
