--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@vercel/ncc": "^0.36.1",
     "execa": "^7.1.1",
     "semantic-release": "^19.0.5",
-    "@semantic-release/changelog": "^6.0.3"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
