--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "src",
+  "main": "index.js",
   "scripts": {
     "lint": "eslint src",
     "test": "jest --passWithNoTests",
@@ -10,6 +10,7 @@
     "@actions/github": "^5.1.1",    
     "@vercel/ncc": "^0.36.1",
     "execa": "^5.1.1",
+    "util":"0.12.5",
     "semantic-release": "^19.0.5",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/release-notes-generator": "^10.0.3"
