--- a/action.yml
+++ b/action.yml
@@ -9,8 +9,8 @@ inputs:
     description: Clean up obsolete release branches
     required: false
   tag-format:
-    description: The prefix to use for the git tag. Defaults to "v".
-    default: "v"
+    description: The prefix to use for the git tag. Defaults to 'v'.
+    default: 'v'
     required: false
 
 runs:
