fix: use tag format from input (#38)
* fix: install all components before run

* fix: install without async await

* only use built-in libs before install

* WIP

* bring back lint and test (if needed)

* fix: don't give GH action input have $, wrap tagFormat

* WIP

* fix: remove condition as unnecessary

Co-authored-by: daotoan-hd <30801056+daotoan-hd@users.noreply.github.com>

---------

Co-authored-by: daotoan-hd <30801056+daotoan-hd@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,11 @@ inputs:
   clean:
     description: Clean up obsolete release branches
     required: false
+  tag-format:
+    description: The prefix to use for the git tag. Defaults to 'v'.
+    default: 'v'
+    required: false
+
 runs:
   using: node16
   main: index.js
