fix: action should receive input `tag-prefix`

--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   clean:
     description: Clean up obsolete release branches
     required: false
-  tag-format:
+  tag-prefix:
     description: The prefix to use for the git tag. Defaults to 'v'.
     default: 'v'
     required: false
