fix: change input parameter to repo-token

--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -10,5 +10,5 @@ jobs:
           ref: release/master
       - uses: ./
         with:
-          github-token: ${{ github.token }}
+          repo-token: ${{ github.token }}
           clean: true
