--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,4 +21,4 @@ jobs:
           npm test
       - uses: ./
         with:
-          github-token: ${{ github.token }}
+          repo-token: ${{ github.token }}
