--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@semantic-release/github": "^8.1.0",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@vercel/ncc": "^0.36.1",
+    "conventional-changelog-conventionalcommits": "^6.1.0",
     "execa": "^5.1.1",
     "semantic-release": "^19.0.5",
     "typescript": "5.0.4",
