feat: DEP-630 - ESM update. fixes

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,6 +12,7 @@ rules:
   camelcase: off
   github/no-then: off
   import/no-commonjs: off
+  import/no-namespace: off
 overrides:
   - files: '**/*.test.js'
     plugins:
